#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

EB-2011-04-15-0: Bugfix:      invalid load_formula value is not rejected
                 Issue:       GE-3451
                 Review:      DG

SH-2011-04-15-0: Bugfix:      file descriptor -1 passed to system calls in 
                              interactive job support
                 Issue:       GE-3440
                 Review:      JG

JG-2011-04-15-0: Bugfix:      jobs get scheduled but are not started after
                              global host changed
                 Issue:       GE-3306
                 Review:      SH

SH-2011-04-13-0: Bugfix:      qsub -pty, improve handling of pty fd and wait in
                              sge_shepherd
                 Issue:       GE-3426
                 Review:      DG

DG-2011-04-12-0: Bugfix:      when an immediate parallel job is rejected through
                              missing resources the remaining job orders for the
                              scheduling run are refused
                 Issue:       GE-3443
                 Review:      JG

SH-2011-04-11-0: Bugfix:      Note user of open source version that qrsh 
                              -suspend_remote is only available in the Univa 
                              version.
                 Issue:       GE-3402
                 Review:      DG

DG-2011-04-08-2: Bugfix:      added bash to login_shell list
                 Issue:       GE-3439
                 Review:      EB

SH-2011-04-08-0: Enhancem.:   removed -uge-ext and -add-univa-copyright from
                              aimk
                 Review:      JG
