@@ -8,6 +8,11 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+JG-2011-04-18-0: Bugfix:      fix for GE-3306 handled implicitly requested
+                              exclusive resources incorrectly
+                 Belongs to:  JG-2011-04-15-0
+                 Review:      SH
+
 EB-2011-04-15-0: Bugfix:      invalid load_formula value is not rejected
                  Issue:       GE-3451
                  Review:      DG
